Added auth middleware to check JWT and permissions Added error handling middleware Improved models Added create platform endpoint Improved swagger
